# steamhook

./: Cargo.toml  README.md  build_debug.bat  build_release.bat  rust-toolchain.toml  test_hook_debug.bat  test_hook_release.bat
crates/steamhook/: Cargo.toml
crates/steamhook/src/: code_analysis.rs  dbghelp.rs  iced_extensions.rs  lib.rs  memory_utils.rs  server_analysis.rs  singleton.rs  steamhook.rs  unpacked_closure.rs  vtable_hook.rs  vtable_hook_types.rs  vtable_scan.rs
crates/test_dll/: Cargo.toml
crates/test_dll/src/: lib.rs
crates/test_launcher/: Cargo.toml
crates/test_launcher/src/: main.rs
src/: client_analysis.rs  code_analysis.rs  lib.rs  memory_utils.rs  steamhook.rs  vtable_hook.rs
test_dll/: Cargo.toml
test_dll/src/: lib.rs
test_launcher/: Cargo.toml
test_launcher/src/: main.rs
