[package]
name = "test_dll"
version = "0.0.1"
authors = ["tremwil <tremwil@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
steamhook = { path = "../steamhook/" }
log = "0.4.17"
simple_logger = "4.0.0"

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Console"
]